--- a/GIS_project.Rmd
+++ b/GIS_project.Rmd
@@ -1,40 +1,89 @@
 ---
-title: "Awesome GIS project"
+title: "R / QGIS Map-Off - When the Data Scientist Meets the Vizulizer"
 author: "Kristian Lunow Nielsen"
 output:
   html_document:
     df_print: paged
-  html_notebook: default
   word_document: default
+  html_notebook: default
 bibliography: Bib.bib
 ---
+This GIS project intents to visulize the differences in growth rates of median earnings between boroughs. While it causes divergence peoples living standards, it is also a drag on each individual boroughs propensity to invest in innovation. At least according to some economists, innovation is the many driver of future growth for economies on advanced growth paths. Innovation can also force that takes economies from one growth path to another, and therefore should investing in innovation be a priority for all sociaties. (Skriv noget mere)  
+The frist thing we do is to read in the raw data that contains the the median earnings for each borough.  
 ```{r include=FALSE}
-library(tidyverse)
-library(geojsonio)
-library(sf)
-library(tmap)
-library(tmaptools)
+#To clear the global environment
+rm(list=ls())
+# Enabling the relevant libraries
+x = c("tidyverse",'shinyjs','leaflet','magrittr','reshape2','readxl','dplyr',"maptools","classInt","OpenStreetMap","tmap","RColorBrewer", "sp", "rgeos", "tmaptools","ggmap", "shinyjs","sf", "downloader", "rgdal", "geojsonio")
+lapply(x, require, character.only = TRUE)
+
+data_raw <- read_xls('C:/Users/Krist/Desktop/Kristian/Privat/Ansøgninger/Udveksling/University College London/Being there/Geographic Information Systems/First Assignment/income-of-tax-payers.xls')
+holder = names(data_raw)
+data = data_raw[,1:2]
+
+for (i in seq(3,length(names(data_raw)),3)){
+  data = cbind(data, data_raw[,i+2])
+}
+
+data = data[2:34,]
 ```
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
+```{r echo=FALSE}
+print(data[1:5,1:6])
+```
 
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
+Above can be seen a snippet of the raw data. This is the data from where the average annualized growth rate has been calculated.
+A growth rate for each year, for each borough, is calculated and can be seen from the snippet below.
 
-To read more, see [@Deng2010]
+```{r include=FALSE}
+for (i in seq(3,length(names(data)))){
+  names(data)[i] = 1996+i
+}
+names(data)[1] = "Code"
+names(data)[2] = "Area"
+
+growth_rates= data[,1:2]
+
+for (i in seq(4,length(names(data)),1)){
+  growth_rates = cbind(growth_rates, (as.numeric(data[,i])/as.numeric(data[,i-1])))
+  names(growth_rates)[i-1] = 1996+i
+}
+
+growth_rates = cbind(growth_rates, ((as.numeric(data[,18])/as.numeric(data[,3]))^(1/16)))
+names(growth_rates)[18] = "Avg._Growth_Rate_in_Earnings"
+```
 
 ```{r echo=FALSE}
-#read some data attributes
-LondonData <- read_csv("https://files.datapress.com/london/dataset/ward-profiles-and-atlas/2015-09-24T14:21:24/ward-profiles-excel-version.csv", na = "n/a")
-#read some geometries
-EW <- geojson_read("http://geoportal.statistics.gov.uk/datasets/8edafbe3276d4b56aec60991cbddda50_2.geojson", what = "sp")
-#pull out London
-LondonMap <- EW[grep("^E09",EW@data$lad15cd),]
-#convert to a simple features object
-LondonMapSF <- st_as_sf(LondonMap)
-#append the data to the geometries
-LondonMapSF <- append_data(LondonMapSF,LondonData, key.shp = "lad15cd", key.data = "New code", ignore.duplicates = TRUE)
-#plot a choropleth
-qtm(LondonMapSF, fill = "% Not Born in UK - 2011")
+print(growth_rates[1:5,1:6])
+```
+
+We are mostly interested in the average annualized growth rate, and it is the one that we plot in the map.
+The average growth rate for each borough is visualized on the map below.
+
+```{r include=FALSE}
+#The boundary data can be downloaded from github
+BoroughMapSF <- read_shape("C:/Users/Krist/Desktop/Kristian/Privat/Ansøgninger/Udveksling/University College London/Being there/Geographic Information Systems/GIS/Wk2/Boundary data/statistical-gis-boundaries-london/ESRI/London_Borough_Excluding_MHW.shp", as.sf = TRUE)
+
+BoroughDataMap <- append_data(BoroughMapSF,growth_rates, key.shp ="GSS_CODE", key.data = "Code", ignore.duplicates = TRUE)
+
+BoroughDataMap["Area"] <- NULL
+```
+```{r echo=FALSE}
+london_osm <- read_osm(BoroughDataMap, type = "esri", zoom = NULL)
+qtm(london_osm) + 
+  tm_shape(BoroughDataMap) + 
+  tm_polygons("Avg._Growth_Rate_in_Earnings", 
+              style="jenks",
+              palette="Greens",
+              midpoint=NA,
+              title=c("Growth Multiple"),
+              alpha = 0.5,
+              legend.position = c("right", "bottom")) + 
+  tm_compass(position = c("left", "bottom"),type = "arrow") + 
+  tm_scale_bar(position = c("left", "bottom")) +
+  tm_layout(legend.position = c("right","bottom"),legend.frame = T) +
+  tm_layout(panel.show = TRUE, panel.labels = "Annualised Growth Multiple, Median Earnings, from 1999-2014", panel.label.size = 1.05)
+
 
 ```
 
@@ -47,7 +96,10 @@ The preview shows you a rendered HTML copy of the contents of the editor. Conseq
 [@Creal2009; @Deng2010]
 
 ```{r}
-library(citr)
+library("png")
 
-
+#pic <- readPNG(system.file("img", "Avg_Ann_Growth_Rate.png", package = "png"))
+pic <- readPNG("Avg_Ann_Growth_Rate.png")
+#rasterImage(pic, 1.2, 1.27, 1.8, 1.73)
+print(pic)
 ```
